# vaultbot

./: .gitignore  Anchor.toml  README.md  config.json  package-lock.json  package.json
app/bot/: index.ts
app/bot/rpc/: rpc.ts
app/miniapp/: package-lock.json  package.json
app/miniapp/hooks/: useVault.ts
app/miniapp/src/: App.tsx  main.tsx
app/miniapp/src/hooks/: useTelegramApp.ts
programs/vaultbot/: Cargo.toml
programs/vaultbot/idls/: vaultbot.json
programs/vaultbot/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/vaultbot/src/instructions/: deposit.rs  initialize_smart_wallet.rs  initialize_vault.rs  withdraw.rs
programs/vaultbot/src/state/: smart_wallet.rs  vault.rs
programs/vaultbot/tests/: litesvm.rs
